added missing google fonts link tag

--- a/index.html
+++ b/index.html
@@ -3,8 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>Surf &amp; Paddle</title>
+
+    <!-- resets  -->
     <link rel="stylesheet" href="normalize.css">
+
+    <!-- fonts  -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Oswald" rel="stylesheet">
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
+
+    <!--  Project styles -->
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
@@ -26,7 +33,6 @@
         <h4>An Ironyard Academy Project Est. Winter 2016</h4>
       </header>
 
-    </div>
 
   </body>
 </html>
